# decentralized-attestation-chain

./: README.md  chain-docker-compose.yml  dev.json  docker-compose.yml
docker/: build.sh  build_bin.sh  rust-toolchain
docker/crust/: Dockerfile
docker/crust-env/: Dockerfile
node/: Cargo.toml
node/res/: mainnet.json
node/src/: chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/collator-selection/: Cargo.toml
pallets/verifier/: Cargo.toml  README.md
pallets/verifier/src/: api.rs  benchmarking.rs  lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: docker_run.sh
sgx/: Config.json  README.md
sgx/docker/: build.sh  build_env.sh
sgx/docker/env/: Dockerfile
sgx/docker/runner/: Dockerfile  start_dcap_service.sh
sgx/scripts/: install.sh  install_deps.sh  utils.sh
sgx/src/: App.cpp  Makefile
sgx/src/include/: CrustStatus.h  Json.h
sgx/src/log/: Log.cpp  Log.h
sgx/src/utils/: Utils.cpp  Utils.h
