[package]
authors = ['Zikun Fan <kun@crust.network>']
description = 'FRAME pallet verifier for call Enclave ECDSA QVL verifying service.'
edition = '2018'
homepage = 'https://crust.network'
license = 'Apache-2.0'
name = 'pallet-verifier'
readme = 'README.md'
repository = 'https://github.com/crustio/tee-alliance'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
serde = { version = "1.0.101", optional = true }
sp-core = { version = "3.0.0", default-features = false }
sp-keystore = { version = "0.9.0", optional = true }
sp-io = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
sp-std = { version = "3.0.0", default-features = false }
lite-json = { version = "0.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"serde",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore",
	"sp-runtime/std",
	"sp-std/std",
]
